Fixed the alignment of the pagedlist.  Main thing left is responsiveness and issue with search bar logic

--- a/DocSearch2.1/Content/PagedList.css
+++ b/DocSearch2.1/Content/PagedList.css
@@ -1,5 +1,5 @@
 .pagination {
-  display: inline-block;
+  /*display: inline-block;*/
   padding-left: 0;
   margin: 20px 0;
   border-radius: 4px;
@@ -133,7 +133,7 @@
 
 .pager li > a,
 .pager li > span {
-  display: inline-block;
+  /*display: inline-block;*/
   padding: 5px 14px;
   background-color: #ffffff;
   border: 1px solid #dddddd;
